--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
-    "react-simple-star-rating": "^3.0.0"
+    "react-simple-star-rating": "^3.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.18",
