--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@hookform/resolvers": "^2.7.1",
+    "@simplyianm/babel-plugin-inline-react-svg": "^1.2.0",
     "@supabase/supabase-js": "^1.22.2",
     "framer-motion": "4",
     "next": "11.1.0",
