--- a/package.json
+++ b/package.json
@@ -27,8 +27,16 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.18",
+    "@types/node": "14",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.3.5"
   }
 }
