--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
-      "~/*":["./src"] 
+      "~/*":["./src/*"]
     }
   },
   "include": [
